--- a/docs/.vitepress/theme/styles/custom.css
+++ b/docs/.vitepress/theme/styles/custom.css
@@ -1,12 +1,9 @@
 :root {
-  /* hero标题渐变色 */
+  /* hero标题渐变色 
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(120deg, #bd34fe, #41d1ff);
-
-  /* 图标背景 */
-  --vp-home-hero-image-background-image: linear-gradient( 135deg, #F6CEEC 10%, #D939CD 100%);
-  --vp-home-hero-image-filter: blur(150px);
-
+  */
+  
    /* brand按钮 */
   --vp-button-brand-bg: #CE9FFC;
 
